--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,8 +19,8 @@
       "type": "image/png"
     }
   ],
-  "id": "/",
-  "start_url": "/",
+  "id": "/AfterSchoolApp/",
+  "start_url": "/AfterSchoolApp/",
   "display": "fullscreen",
   "background_color": "#fff",
   "screenshots": [
